--- a/cats.css
+++ b/cats.css
@@ -1,6 +1,6 @@
 body{
     background-color: #839D9A;
-    front-family: 'Gill Sans MT', Calibri, ;'Trebuchet', sans-serif;
+    font-family: 'Gill Sans MT', Calibri, ;'Trebuchet', sans-serif;
 }
 
 .cat {
@@ -11,17 +11,18 @@ body{
     border: 1px solid #7BB2D9;
     flex: 1;
 }
-@media (min-width: 960px) {
+@media (min-width: 1200px) {
 
 
 
 .cats {
     display: flex;
+    flex-wrap: wrap;
       }
 }
 
 fieldset {
-    marging: 1em;
+    margin: 1em;
     border: 0;
 }
 
@@ -33,4 +34,10 @@ buttom{
 
 imput {
     padding: 1em;
+}
+
+@media (max-width: 767px) {
+    .cat {
+        width: 100%;
+    }
 }
